# editor-v3

./: .gitignore  installer.nsi
.github/workflows/: build-macos.yml  build-windows.yml
editor_v3/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  ngramanalyzer.cpp  ngramanalyzer.h  ngramtablemodel.cpp  ngramtablemodel.h  richtexteditor.cpp  richtexteditor.h  specialchardialog.cpp  specialchardialog.h  tabledialog.cpp  tabledialog.h
